--- a/src/pages/crear-pedido/crear-pedido.html
+++ b/src/pages/crear-pedido/crear-pedido.html
@@ -9,7 +9,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
-  <form id="crearPedido-form2">
+  <form id="crearPedido-form2" (ngSubmit)="savePedido();">
     <ion-item id="crearPedido-input9">
       <ion-label stacked>
         Barrio
