--- a/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.html
+++ b/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.html
@@ -9,30 +9,15 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page3">
-  <ion-list id="pedidosUltimaHora-list6">
-    <ion-item color="balanced" id="pedidosUltimaHora-list-item15">
-      <ion-icon name="checkmark" item-left></ion-icon>
-      Pedido #123456 (Entregado)
-    </ion-item>
-    <ion-item color="balanced" id="pedidosUltimaHora-list-item23">
-      <ion-icon name="checkmark" item-left></ion-icon>
-      Pedido #654987 (Entregado)
-    </ion-item>
-    <ion-item color="energized" on-click="goToDetallePedido()" id="pedidosUltimaHora-list-item17">
+  <ion-list id="pedidosUltimaHora-list6" inset>
+    <ion-item *ngFor="let pedido of pedidos;" color="energized" on-click="goToDetallePedido(pedido._id)" id="pedidosUltimaHora-list-item17">
       <ion-icon name="send" item-left></ion-icon>
-      Pedido #963852 (En Camino)
-    </ion-item>
-    <ion-item color="energized" on-click="goToDetallePedido()" id="pedidosUltimaHora-list-item24">
-      <ion-icon name="send" item-left></ion-icon>
-      Pedido #963852 (En Camino)
-    </ion-item>
-    <ion-item color="assertive" on-click="goToDetallePedido()" id="pedidosUltimaHora-list-item19">
-      <ion-icon name="close" item-left></ion-icon>
-      Pedido #741855 (Cancelado)
-    </ion-item>
-    <ion-item color="assertive" id="pedidosUltimaHora-list-item25">
-      <ion-icon name="close" item-left></ion-icon>
-      Pedido #741855 (Cancelado)
+      Pedido #{{pedido.noPedido}} ({{pedido.estado[0]}})
     </ion-item>
   </ion-list>
+  <button id="detallePedido-button2" ion-button color="balanced" block on-click="goToCrearPedido()" style="position: absolute;bottom: 0;left: 0;" >
+    Crear Pedido
+  </button>
 </ion-content>
+
+
