--- a/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.html
+++ b/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.html
@@ -10,14 +10,14 @@
 </ion-header>
 <ion-content padding id="page3">
   <ion-list id="pedidosUltimaHora-list6" inset>
-    <ion-item *ngFor="let pedido of pedidos;" color="energized" on-click="goToDetallePedido(pedido._id)" id="pedidosUltimaHora-list-item17">
+    <ion-item *ngFor="let pedido of pedidos;" color="energized" on-click="goToDetallePedido(pedido._id)"
+      id="pedidosUltimaHora-list-item17">
       <ion-icon name="send" item-left></ion-icon>
       Pedido #{{pedido.noPedido}} ({{pedido.estado[0]}})
     </ion-item>
   </ion-list>
-  <button id="detallePedido-button2" ion-button color="balanced" block on-click="goToCrearPedido()" style="position: absolute;bottom: 0;left: 0;" >
+  <button id="detallePedido-button2" ion-button color="balanced" block on-click="goToCrearPedido()"
+    style="position: absolute;bottom: 0;left: 0;">
     Crear Pedido
   </button>
 </ion-content>
-
-
