--- a/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.html
+++ b/src/pages/pedidos-ultima-hora/pedidos-ultima-hora.html
@@ -15,7 +15,8 @@
       Pedido #{{pedido.noPedido}} ({{pedido.estado[0]}})
     </ion-item>
   </ion-list>
-  <button id="detallePedido-button2" ion-button color="balanced" block on-click="goToCrearPedido()" style="position: absolute;bottom: 0;left: 0;" >
+  <button id="detallePedido-button2" ion-button class="btn-dafult-app" block on-click="goToCrearPedido()" style="position: absolute;bottom: 0;left: 0;" >
+    <i class="zwicon-file-export"></i>
     Crear Pedido
   </button>
 </ion-content>
